--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -2,8 +2,8 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>途行 Made By <a href="http://godluos-blog.logdown.com/"
-    data-toggle="tooltip" title="Visit Blog">GodLuoS</a></p>
+  <%= link_to("返回首页" ,root_path) %>
     <br>
-    <%= link_to("返回首页" ,root_path) %>
+    <p>雪绒花 Made By Claire&Lyn&Varun&Water</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>吉林，长春</p>
 </footer>
