--- a/app/views/kindergartens/_index_form.html.erb
+++ b/app/views/kindergartens/_index_form.html.erb
@@ -1,4 +1,6 @@
-<div class="kindergarten-list-back">
+<!-- <div class="kindergarten-list-back"> -->
+
+
   <div class="main-box">
     <div class="col-xs-9 col-sm-9 col-lg-9 kindergarten-box row">
       <div class="kindergarten-back">
@@ -12,11 +14,14 @@
         </div>
       </div>
 
-        <div class="connact">
-          <div class="connact-mid">
+      <div class="connact">
+        <div class="connact-mid">
           联系电话：<%= kindergarten.phone %>
           <br/>
           <sapn class="fa fa-envelope"></sapn><span><%= kindergarten.user.email %></span>
+          <br/>
+          <span class="fa fa-map-marker"></span><span><%= kindergarten.location%></span>
+
           <br/>
         </div>
       </div>
@@ -24,5 +29,4 @@
   </div>
 </div>
 
-</div>
-</div>
+<!-- </div> -->
