--- a/app/views/kindergartens/edit.html.erb
+++ b/app/views/kindergartens/edit.html.erb
@@ -6,6 +6,8 @@
 <%= f.input :description %>
 <%= f.input :fee, :label => "学费" %>
 <%= f.input :phone, :label => "联系电话" %>
+<%= f.input :location, :label => "地点" %>
+
 <%= f.input :is_hidden %>
   <%= f.submit "Submit" %>
 <% end %>
