change job to kindergarten

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -281,7 +281,7 @@ h4 {
 }
 
 /* Black  buttons with extra padding and without rounded borders */
-.btn-job {
+.btn-kindergarten {
     padding: 10px 20px;
     background-color: #44ABE7;
     color: #323232;
@@ -290,7 +290,7 @@ h4 {
 }
 
 /* On hover, the color of .btn will transition to white with black text */
-.btn-job:hover, .btn:focus {
+.btn-:hover, .btn:focus {
     border: 1px solid #333;
     background-color: #F5F5F5;
     color: #000;
