--- a/app/views/kindergartens/search.html.erb
+++ b/app/views/kindergartens/search.html.erb
@@ -12,7 +12,7 @@
     <h3 class="search-info-title"> 有关"<%= @query_string %>"的信息 </h3>
     <div class="search-result">
 
-      <div class="row jobs-show0"></div>
+      <div class="row kindergartens-show0"></div>
       <div class="Kindergarten-table">
         <% @kindergartens.each do |kindergarten| %>
         <div class="row kindergarten-show">
