--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -116,7 +116,7 @@
       <p>还是神秘的深林</p>
       <p>都蕴藏着惊心动魄的美丽</p>
       <p>只有深入其中才能发觉</p>
-      <a href="/jobs" id="begin" class="btn-job">进入途行</a>
+      <a href="/kindergartens" id="begin" class="btn-kindergarten">进入途行</a>
     </div>
   </div>
   <div class="col-sm-4">
@@ -131,7 +131,7 @@
       <p>在经历风雨过后</p>
       <p>任何情感都会</p>
       <p>愈发真挚</p>
-      <a href="/jobs" id="begin" class="btn-job">进入途行</a>
+      <a href="/kindergartens" id="begin" class="btn-kindergarten">进入途行</a>
     </div>
   </div>
   <div class="col-sm-4">
@@ -146,7 +146,7 @@
       <p>在仙湖旁洞察人生的价值</p>
       <p>所有一切不平凡的经历</p>
       <p>都需要一个伟大的开始</p>
-      <a href="/jobs" id="begin" class="btn-job">进入途行</a>
+      <a href="/kindergartens" id="begin" class="btn-kindergarten">进入途行</a>
     </div>
   </div>
 </div>
@@ -165,7 +165,7 @@
         <img src="http://ongoo1pyy.bkt.clouddn.com/sanxia.png">
         <p><strong>三峡</strong></p>
         <p>探寻瞿塘天险古栈道</p>
-        <a href="/jobs/1" class="btn-job">了解旅程</a>
+        <a href="/kindergartens/1" class="btn-kindergarten">了解旅程</a>
       </div>
     </div>
     <div class="col-sm-4">
@@ -173,7 +173,7 @@
         <img src="http://ongoo1pyy.bkt.clouddn.com/yading.png">
         <p><strong>亚丁</strong></p>
         <p>雪山中寻找人生的意义</p>
-        <a href="/jobs/2" class="btn-job">了解旅程</a>
+        <a href="/kindergartens/2" class="btn-kindergarten">了解旅程</a>
       </div>
     </div>
     <div class="col-sm-4">
@@ -181,7 +181,7 @@
         <img src="http://ongoo1pyy.bkt.clouddn.com/motuo.png">
         <p><strong>墨脱</strong></p>
         <p>在雅鲁藏布挑战生命的极限</p>
-        <a href="/jobs/3" class="btn-job">了解旅程</a>
+        <a href="/kindergartens/3" class="btn-kindergarten">了解旅程</a>
       </div>
     </div>
   </div>
